--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,31 @@
+{% block layout %}
+{% spaceless %}
+    {% set pageLang = app.request.locale %}
+    {% set pageTitle = 'dso'|trans ~ ' - ' ~ pageTitle|default('') %}
+    {% set pageDesc = pageDesc|default('') %}
+    {% set pageUrl = app.request.uri %}
+    {% set pageUrlCanonical = app.request.getSchemeAndHttpHost ~ app.request.baseUrl ~ app.request.pathInfo %}
+    {% set favicon = favicon|default('') %}
+{% endspaceless %}
 <!DOCTYPE html>
-<html>
+<html lang="{{ pageLang }}">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block meta %}
+            <title></title>
+            <meta name="title" content="">
+            <meta name="description" content="">
+            <link rel="canonical" href="{{ pageUrlCanonical }}">
+            <link rel="icon" type="image/x-icon" href="{{ favicon }}"/>
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% block header %}{% endblock %}
+            {% block content %}{% endblock %}
+            {% block footer %}{% endblock %}
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+{% endblock %}
