test first controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,8 @@
     <head>
         <meta charset="UTF-8">
         {% block meta %}
-            <title></title>
-            <meta name="title" content="">
+            <title>{{ pageTitle }}</title>
+            <meta name="title" content="{{ pageTitle }}">
             <meta name="description" content="">
             <link rel="canonical" href="{{ pageUrlCanonical }}">
             <link rel="icon" type="image/x-icon" href="{{ favicon }}"/>
