Add form homepage

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,5 +4,9 @@
 {% set pageDesc = '' %}
 
 {% block content %}
-  Coucou
+
+  {{ 'homepage.message'|trans }}
+  
+  {% include 'forms/search.html.twig' %}
+
 {% endblock %}
