--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,9 @@
             {% block content %}{% endblock %}
             {% block footer %}{% endblock %}
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+          <script src="{{ asset('build/app.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
 {% endblock %}
