--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,7 @@
       {% endblock %}
 
       {% block stylesheets %}
-        <link href="{{ 'build/css/app.css' }}" rel="stylesheet">
-        {#{{ encore_entry_link_tags('app') }}#}
+        {{ encore_entry_link_tags('app') }}
       {% endblock %}
     </head>
 
@@ -33,7 +32,7 @@
     {% endblock %}
 
     {% block javascripts %}
-      <script src="{{ 'build/app.js' }}"></script>
+      {{ encore_entry_script_tags('app') }}
     {% endblock %}
     </body>
   </html>
