--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -5,12 +5,11 @@
 
 {% block content %}
   <div data-home-widget data-home-title="{{ 'homepage.message'|trans }}"></div>
-  <div id="app-homepage">
-  </div>
+  <div id="app-homepage"></div>
   {% include 'forms/search.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
   {{ parent() }}
-  <script src="{{ 'build/home.js' }}"></script>
+  {{ encore_entry_script_tags('home') }}
 {% endblock %}
