Add 4th image for slider home

--- a/assets/css/components/Slider.scss
+++ b/assets/css/components/Slider.scss
@@ -47,9 +47,9 @@
     background-image: url(../../images/background/bg-3.jpg);
   }
 
-  /*&--4 {*/
-  /*background-image: url(../../images/background/bg-4.jpg);*/
-  /*}*/
+  &--4 {
+    background-image: url(../../images/background/bg-4.jpg);
+  }
 
   h3 {
     font-size: 32px;
