Test fix components vue.js

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
   <div data-home-widget data-home-title="{{ 'homepage.message'|trans }}"></div>
-  <div id="app-homepage"></div>
+  <div id="app"></div>
   {% include 'forms/search.html.twig' %}
 {% endblock %}
 
