--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -6,7 +6,7 @@
 {% block content %}
   <div data-home-widget data-home-title="{{ 'homepage.message'|trans }}"></div>
   <div id="app"></div>
-  {% include 'forms/search.html.twig' %}
+  {#{% include 'forms/search.html.twig' %}#}
 {% endblock %}
 
 {% block javascripts %}
