#5 Searchautocomplete Add some style and add VueRouter

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import "components/Homeslider.scss";
+@import "components/Searchautocomplete.scss";
 @import "components/Slider";
 
 body {
