Homepage with autocomplete

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -7,7 +7,7 @@
 @import "components/Slider";
 
 body {
-  font-family: $font-lato;
+  font-family: $font;
   background-color: $bgd-color;
   margin: 0;
 }
