--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i');
+
 // Colors
 $bgd-color: #3e3d40;
 
+$color-text: #e9e9e9;
 $color-success: #3c763d;
 $color-error: #a94442;
 
 
 // Fonts
 $font-lato: Lato,sans-serif;
+$font: 'Open Sans', sans-serif;
 
 // line height
 $lineheight: 1rem;
