--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -2,8 +2,11 @@
   &__title,
   &__subTitle {
     overflow: visible;
-    color: lightgray;
-    font-family: $font-lato;
+    color: #e9e9e9;
+    font-family: $font;
+    font-weight: 500;
+    font-size: 2rem;
+
   }
 
   &__slides {
@@ -27,7 +30,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     @media (min-width: 42em) {
       animation: kenburns 8s;
@@ -51,13 +54,10 @@
     }
   }
 
-  &__research {
+  &__Research {
     position: fixed;
-    width: 500px;
-    height: auto;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    margin-top: -100px; /* Negative half of height. */
-    margin-left: -250px; /* Negative half of width. */
+    transform: translate(-50%, 0);
   }
 }
