--- a/assets/css/components/Searchautocomplete.scss
+++ b/assets/css/components/Searchautocomplete.scss
@@ -4,12 +4,22 @@
 
   }
 
-  &__input {
+  &__inputText {
     padding: .400rem .400rem;
-    width: 500px;
+    width: 100%;
     border: 1px lightgray;
     border-radius: 0.25rem;
     line-height: 1.5;
     font-size: 1rem;
+    border: 1px solid $bgd-color;
+  }
+
+  &__list {
+    background-color: #F5F5F5;
+    color: $bgd-color;
+    > li {
+      text-decoration: none;
+      line-height: 2em;
+    }
   }
 }
