--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,11 @@
 
     <body>
     {% block body %}
-      {% block header %}{% endblock %}
+      {% block header %}
+        <header>
+          <h1>{{ 'dso'|trans }}</h1>
+        </header>
+      {% endblock %}
       {% block content %}{% endblock %}
       {% block footer %}{% endblock %}
     {% endblock %}
