--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,12 +1,18 @@
 <header id="Vue-header">
-  <div class="Switch-Lang-List">
-    {% set params = app.request.attributes.get('_route_params')|merge(app.request.query.all()) %}
-    <listLocales lang="en" value="{{ en|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>
-    <listLocales lang="fr" value="{{ fr|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>
-    <listLocales lang="pt" value="{{ pt|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>
-  </div>
 
-  <div id="switch-lang" class="listlocales">
-    <locale-lang v-for="datalocale in listlocales" :locale="locale" />
-  </div>
+  <h1 class="h1 h1__title">
+    {{ 'dso'|trans }}
+  </h1>
+
+  <nav></nav>
+  {#<div class="Switch-Lang-List">#}
+    {#{% set params = app.request.attributes.get('_route_params')|merge(app.request.query.all()) %}#}
+    {#<listLocales lang="en" value="{{ en|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
+    {#<listLocales lang="fr" value="{{ fr|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
+    {#<listLocales lang="pt" value="{{ pt|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
+  {#</div>#}
+
+  {#<div id="switch-lang" class="listlocales">#}
+    {#<locale-lang v-for="datalocale in listlocales" :locale="locale" />#}
+  {#</div>#}
 </header>
