--- a/assets/css/base/_init.scss
+++ b/assets/css/base/_init.scss
@@ -7,6 +7,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+header {
+  overflow: visible;
+  height: 60px;
+  opacity: 0.7;
+}
+
 input {
   padding: 2px
 }
