--- a/assets/css/components/Searchautocomplete.scss
+++ b/assets/css/components/Searchautocomplete.scss
@@ -5,14 +5,13 @@
   }
 
   &__inputText {
-    padding: .400rem .400rem;
+    padding: .5rem 1rem;
     width: 100%;
     border: 1px lightgray;
-    border-radius: 0.25rem;
-    line-height: 1.5;
+    border-radius: 0.3rem;
+    line-height: 2;
+    font-size: 1.25rem;
     font-size: 1rem;
-    border: 1px solid $bgd-color;
-    margin-bottom: 1em;
   }
 
   &__list {
