--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -5,7 +5,10 @@
 
 {% block content %}
   <div data-home-widget data-home-title="{{ 'homepage.message'|trans }}"></div>
-  <div id="app"></div>
+
+  <section>
+    <div id="app"></div>
+  </section>
   {#{% include 'forms/search.html.twig' %}#}
 {% endblock %}
 
