Test fix docker stack + buildObject from ES

--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div id="app">
-    {% set label = "const_id." ~ id %}
+    {% set label = "const_id." ~ constellation.id %}
     <h1>{{ label|trans }}</h1>
   </div>
 
