Create a manager to build a Dso entity

--- a/templates/includes/layout/footer.html.twig
+++ b/templates/includes/layout/footer.html.twig
@@ -1,1 +1,16 @@
-<footer></footer>
+<footer>
+  <div class="">
+    {{ 'dso'|trans }}
+  </div>
+  <div class="">
+    <ul>
+      <li>{{ 'contact.title'|trans }}</li>
+      <li>{{ 'about.us'|trans }}</li>
+    </ul>
+  </div>
+  <div class="">
+    {#GitHub#}
+    {#Facebook#}
+    {#Twitter#}
+  </div>
+</footer>
