Slider page DSO

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -5,7 +5,7 @@
 @import "components/Header";
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
-@import "components/Slider";
+@import "components/BandeauHeader";
 
 body {
   font-family: $font;
