Dso : add title formated + fix translations + vue.js

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -7,7 +7,9 @@
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
 // Components DSO pages
+@import "components/Dso";
 @import "components/BandeauHeader";
+
 @import "components/VueFlux";
 
 body {
