--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% set pageTitle = title %}
+{% set pageImage = '' %}
 {#https://coxpi.draftium.site/#}
 {% block content %}
-  <div data-dso-widget data-dso="{{ dso|json_encode }}" data-images="{{ images|json_encode }}"></div>
+  <div data-dso-widget data-dso="{{ dso|json_encode }}" data-title="{{ title }}" data-images="{{ images|json_encode }}"></div>
 
   <section>
     <div id="app"></div>
