--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -2,7 +2,7 @@
   &__title,
   &__subTitle {
     overflow: visible;
-    color: #e9e9e9;
+    color: $color-text;
     font-family: $font;
     font-weight: 500;
     font-size: 2rem;
