Update build map

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -20,3 +20,8 @@
   {{ encore_entry_script_tags('dso') }}
 {% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {{ encore_entry_link_tags('celestial') }}
+{% endblock %}
+
