--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -6,6 +6,7 @@
 {% block content %}
   <div
     data-dso-widget
+    data-imgcover="{{ imgCover }}"
     data-dso="{{ dso|json_encode }}"
     data-title="{{ title }}"
     data-images="{{ images|json_encode }}"
