--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -6,6 +6,7 @@
 
   &__title {
     color: $color-text-dark;
+    border-bottom: 1px solid $bgd-dark;
   }
 
   &__container {
@@ -14,13 +15,33 @@
     margin-right: auto;
   }
 
+
+  // Data
+  &__data {
+    width: 100%;
+    margin: 1em 0em;
+  }
+
   &__table {
     background-color: $bgd-grey;
+    width: inherit;
+    border-collapse: collapse;
+  }
+
+  &__tr {
+
+  }
+
+  &__td {
+    width: auto;
+    min-width: 0;
+    font-size: 1.1rem;
+    border-bottom: 1px solid $bgd-white;
   }
 
   // Slider VueFlux
   &__slider {
-    width: 60%;
+    margin: 1em;
     padding-left: .5rem;
     padding-right: .5rem;
   }
