Add info Dso + functions utils

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% set pageTitle = title %}
-{% set pageImage = '' %}
+{% set pageImage = imgCover %}
 {#https://coxpi.draftium.site/#}
+
 {% block content %}
   <div
     data-dso-widget
