Fix component SLider + social share

--- a/assets/css/components/VueFlux.scss
+++ b/assets/css/components/VueFlux.scss
@@ -1,4 +1,3 @@
-
 .vue-flux {
   box-shadow: 0 0 12px 2px rgba(34,36,38,.85);
 
@@ -24,5 +23,5 @@
 }
 
 p {
-  margin: 24px 0;
+  //margin: 24px 0;
 }
