--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,7 +1,7 @@
 <header id="Vue-header">
 
   <h1 class="h1 h1__title">
-    {{ 'dso'|trans }}
+    <a href="{{ path('homepage') }}">{{ 'dso'|trans }}</a>
   </h1>
 
   <nav></nav>
