--- a/assets/css/components/Searchautocomplete.scss
+++ b/assets/css/components/Searchautocomplete.scss
@@ -14,11 +14,42 @@
   }
 
   &__list {
-    background-color: $bgd-white;
     color: $color-text-dark;
-    > li {
-      text-decoration: none;
-      line-height: 2em;
+
+    ul {
+      background-color: $bgd-grey;
+      position: absolute;
+      list-style: none;
+      min-width: 15%;
+      margin-top: 10px;
+      padding: 0;
+    }
+
+    li {
+      line-height: 1.8em;
+      padding-left: 1em;
+
+      a {
+        text-decoration: none;
+        color: $color-text;
+
+        .autocomplete-anchor-label {
+          display: block;
+          color: $color-text;
+
+          &:hover {
+            color: $color-text-dark;
+          }
+        }
+      }
+
+
+      &:hover {
+        background-color: $bgd-white;
+      }
+      a:hover {
+        color: $color-text-dark;
+      }
     }
   }
 }
