--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -5,6 +5,33 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    padding: 0.5em;
+    width: 100%
+  }
+
+  &__switchLang {
+    float: right;
+    display: none;
+    position: absolute;
+  }
+
+  &__dropdown {
+    display: none;
+    position: absolute;
+    z-index: 1;
+
+    a {
+      text-decoration: none;
+      display: block;
+    }
+
+    a:hover {
+
+    }
+
+    &:hover {
+      display: block;
+    }
   }
 }
 
@@ -19,3 +46,4 @@
     color: inherit;
   }
 }
+
