--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,19 +1,26 @@
+
+{{ dump(app.request.get('_route')) }}
+{{ dump(app.request.get('_route_params')) }}
+{#{{ dump(app.request.query.all) }}#}
 <header class="header">
   <div class="header__container">
     <h1 class="h1 h1__title">
+      <i class="fas fa-bars"></i>
       <a href="{{ path('homepage') }}">{{ 'dso'|trans }}</a>
     </h1>
 
     <nav></nav>
-    {#<div class="Switch-Lang-List">#}
-    {#{% set params = app.request.attributes.get('_route_params')|merge(app.request.query.all()) %}#}
-    {#<listLocales lang="en" value="{{ en|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
-    {#<listLocales lang="fr" value="{{ fr|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
-    {#<listLocales lang="pt" value="{{ pt|trans }}" path="{{ path(app.request.get('_route'), params) }}"></listLocales>#}
-    {#</div>#}
 
-    {#<div id="switch-lang" class="listlocales">#}
-    {#<locale-lang v-for="datalocale in listlocales" :locale="locale" />#}
-    {#</div>#}
+    <div class="header__switchLang">
+      <i class="far fa-flag"></i> {{ 'selectLang'|trans }}
+      <div class="header__dropdown">
+        {% set params = [] %}
+        {#app.request.get('_route_params')|merge(app.request.query.all) %}#}
+
+        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="en" title="{{ 'en'|trans }}">{{ 'en'|trans }}</a>#}
+        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="fr" title="{{ 'fr'|trans }}">{{ 'fr'|trans }}</a>#}
+        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="pt" title="{{ 'pt'|trans }}">{{ 'pt'|trans }}</a>#}
+      </div>
+    </div>
   </div>
 </header>
