--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,7 +1,3 @@
-
-{{ dump(app.request.get('_route')) }}
-{{ dump(app.request.get('_route_params')) }}
-{#{{ dump(app.request.query.all) }}#}
 <header class="header">
   <div class="header__container">
     <h1 class="h1 h1__title">
@@ -14,12 +10,9 @@
     <div class="header__switchLang">
       <i class="far fa-flag"></i> {{ 'selectLang'|trans }}
       <div class="header__dropdown">
-        {% set params = [] %}
-        {#app.request.get('_route_params')|merge(app.request.query.all) %}#}
-
-        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="en" title="{{ 'en'|trans }}">{{ 'en'|trans }}</a>#}
-        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="fr" title="{{ 'fr'|trans }}">{{ 'fr'|trans }}</a>#}
-        {#<a href="{{ path(app.request.get('_route'), params) }}" lang="pt" title="{{ 'pt'|trans }}">{{ 'pt'|trans }}</a>#}
+        {% for locale in listLocales %}
+          <a href="{{ path(_route ~ '.' ~ locale, params|merge({'_locale': locale})) }}" lang="{{ locale }}" title="{{ locale|trans }}">{{ locale|trans }}</a>
+        {% endfor %}
       </div>
     </div>
   </div>
