--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -43,6 +43,13 @@
   &__currentLang {
     color: $color-text;
   }
+
+  &__search {
+    background-color: $bgd-white;
+    width: 100%;
+    height: 400px;
+    display: none;
+  }
 }
 
 .h1 {
