--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -35,7 +35,6 @@
       background-color: $bgd-dark;
 
       &:hover {
-        background-color: $bgd-grey;
         color: $color-text-dark;
       }
 
@@ -46,7 +45,7 @@
         border: none;
         transition: 0.15s;
         background: $bgd-dark;
-
+        width: 100%;
       }
     }
   }
@@ -62,7 +61,6 @@
     transition: 0.25s;
     padding-left: 0;
     padding-right: 0;
-    padding-bottom: 10px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .1);
     margin: 0;
     left: -5em;
