--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -3,5 +3,6 @@
  data-locales="{{ listLocales|json_encode }}"
  data-currentlocale="{{ currentLocale }}"
  data-title="{{ 'dso'|trans }}"
+ data-placeholder="{{ 'home.search.placeholder'|trans }}"
 >
 </div>
